@@ -94,7 +94,7 @@ case "${1}" in
       if [ "${error_value}" = 1 ]; then
          msg="\nWARNING:\n\nFile system errors "
          msg="${msg}were found and have been corrected.\n"
-         msg="${msg}     You may want to double-check that "
+         msg="${msg}      You may want to double-check that "
          msg="${msg}everything was fixed properly."
          log_warning_msg "$msg"
       fi
