@@ -44,6 +44,44 @@
     -->
     <listitem>
       <itemizedlist>
+      <para>2020-08-04</para>
+        <listitem>
+          <para>[bdubbs] - Update to gettext-0.21. Fixes
+          <ulink url="&lfs-ticket-root;4704">#4704</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to binutils-2.35. Fixes
+          <ulink url="&lfs-ticket-root;4702">#4702</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to gcc-10.2.0. Fixes
+          <ulink url="&lfs-ticket-root;4701">#4701</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to check-0.15.1. Fixes
+          <ulink url="&lfs-ticket-root;4700">#4700</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to bison-3.7.1. Fixes
+          <ulink url="&lfs-ticket-root;4699">#4699</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to util-linux 2.36.0. Fixes
+          <ulink url="&lfs-ticket-root;4698">#4698</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to libcap-2.42. Fixes
+          <ulink url="&lfs-ticket-root;4703">#4703</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to linux-5.7.12. Fixes
+          <ulink url="&lfs-ticket-root;4697">#4697</ulink>.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
+      <itemizedlist>
       <para>2020-07-21</para>
         <listitem>
           <para>[bdubbs] - Update to Python3-3.8.5. Fixes
