@@ -26,7 +26,7 @@
       </listitem>
     </varlistentry>
 
-
+<!--
     <varlistentry>
       <term>Binutils Fix for gold Test Suite Patch - <token>&binutils-gold-test-patch-size;</token>:</term>
       <listitem>
@@ -34,7 +34,7 @@
         <para>MD5 sum: <literal>&binutils-gold-test-patch-md5;</literal></para>
       </listitem>
     </varlistentry>
-
+-->
     <varlistentry>
       <term>Bzip2 Documentation Patch - <token>&bzip2-docs-patch-size;</token>:</term>
       <listitem>
@@ -58,7 +58,7 @@
         <para>MD5 sum: <literal>&glibc-fhs-patch-md5;</literal></para>
       </listitem>
     </varlistentry>
-
+<!--
     <varlistentry>
       <term>GCC Cross Build Fix Patch - <token>&gcc-cross-patch-size;</token>:</term>
       <listitem>
@@ -66,12 +66,20 @@
         <para>MD5 sum: <literal>&gcc-cross-patch-md5;</literal></para>
       </listitem>
     </varlistentry>
-
+-->
     <varlistentry>
       <term>Kbd Backspace/Delete Fix Patch - <token>&kbd-backspace-patch-size;</token>:</term>
       <listitem>
         <para>Download: <ulink url="&patches-root;&kbd-backspace-patch;"/></para>
         <para>MD5 sum: <literal>&kbd-backspace-patch-md5;</literal></para>
+      </listitem>
+    </varlistentry>
+
+    <varlistentry>
+      <term>Libpipeline Checks Patch - <token>&libpipeline-checks-patch-size;</token>:</term>
+      <listitem>
+        <para>Download: <ulink url="&patches-root;&libpipeline-checks-patch;"/></para>
+        <para>MD5 sum: <literal>&libpipeline-checks-patch-md5;</literal></para>
       </listitem>
     </varlistentry>
 
