@@ -8,9 +8,9 @@
 <sect1 id="ch-tools-creatingminlayout">
   <?dbhtml filename="creatingminlayout.html"?>
 
-  <title>Creating the Minimal directory layout in LFS filesystem</title>
+  <title>Creating a limited directory layout in LFS filesystem</title>
 
-  <para>The first task performed in the LFS partition is to create a minimal
+  <para>The first task performed in the LFS partition is to create a limited
   directory hierarchy so that programs compiled in <xref
   linkend="chapter-temporary-tools"/> may be installed in their final
   location. This is needed so that those temporary programs be overwritten
@@ -19,7 +19,7 @@
   <para>Create the required directory layout by running the following as
   <systemitem class="username">root</systemitem>:</para>
 
-<screen><userinput>mkdir -pv $LFS/{usr,lib,var,etc,bin,sbin}
+<screen><userinput>mkdir -pv $LFS/{bin,etc,lib,sbin,usr,var}
 case $(uname -m) in
   x86_64) mkdir -pv $LFS/lib64 ;;
 esac</userinput></screen>
