@@ -62,12 +62,12 @@ mv -v mpc-&mpc-version; mpc</userinput></screen>
     sed -e '/m64=/s/lib64/lib/' -i.orig gcc/config/i386/t-linux64
   ;;
 esac</userinput></screen>
-
+<!--
     <para>Fix an issue with GCC-10.1 when building with a cross
     compiler:</para>
 
 <screen><userinput remap="pre">patch -Np1 -i ../&gcc-cross-patch;</userinput></screen>
-
+-->
     <para>Create a separate build directory again:</para>
 
 <screen><userinput remap="pre">mkdir -v build
