@@ -15,6 +15,10 @@
   <para>Create some root-level directories that are not in the limited set
     required in the previous chapters by issuing the following command:</para>
 
+  <note><para>Some of the directories below have already been created earlier
+  with explicit instructions or when installing some packages.  They are
+  repeated below for completeness.</para></note>
+
 <screen><userinput>mkdir -pv /{boot,home,mnt,opt,srv}</userinput></screen>
 
   <para>Create the required set of subdirectories below the root-level by
@@ -30,8 +34,8 @@ mkdir -pv /usr/{,local/}share/man/man{1..8}
 mkdir -pv /var/{cache,local,log,mail,opt,spool}
 mkdir -pv /var/lib/{color,misc,locate}
 
-ln -sv /run /var/run
-ln -sv /run/lock /var/lock
+ln -sfv /run /var/run
+ln -sfv /run/lock /var/lock
 
 install -dv -m 0750 /root
 install -dv -m 1777 /tmp /var/tmp</userinput></screen>
