@@ -58,11 +58,9 @@
 Ask your system administrator to create more.</computeroutput></screen>
 
     <para>Now remove one test that prevents the tests from running
-    to completion, and fix other tests in the gold test suite, which
-    need to be adjusted for GCC 10:</para>
+    to completion:</para>
 
-<screen><userinput remap="pre">sed -i '/@\tincremental_copy/d' gold/testsuite/Makefile.in
-patch -Np1 -i ../binutils-&binutils-version;-gcc10_gold_test_fix-1.patch</userinput></screen>
+<screen><userinput remap="pre">sed -i '/@\tincremental_copy/d' gold/testsuite/Makefile.in</userinput></screen>
 
     <para>The Binutils documentation recommends building Binutils 
     in a dedicated build directory:</para>
