@@ -45,7 +45,7 @@
 
     <para>Prevent a static library from being installed:</para>
 
-<screen><userinput remap="pre">sed -i '/install.*STACAPLIBNAME/d' libcap/Makefile</userinput></screen>
+<screen><userinput remap="pre">sed -i '/install -m.*STACAPLIBNAME/d' libcap/Makefile</userinput></screen>
 
     <para>Compile the package:</para>
 
