@@ -41,6 +41,10 @@
   <sect2 role="installation">
     <title>Installation of Libpipeline</title>
 
+    <para>First, fix the files in the test suite:</para>
+
+<screen><userinput remap="pre">patch -Np1 -i ../&libpipeline-checks-patch;</userinput></screen>
+
     <para>Prepare Libpipeline for compilation:</para>
 
 <screen><userinput remap="configure">./configure --prefix=/usr</userinput></screen>
