@@ -38,7 +38,7 @@
   </itemizedlist>
 
   <para>There are some hints written on the topic of package management. Visit
-  the <ulink url="&hints-index;">Hints Project</ulink> and see if one of them
+  the <ulink url="&hints-root;">Hints Project</ulink> and see if one of them
   fits your need.</para>
 
   <sect2>
@@ -231,7 +231,7 @@ make DESTDIR=/usr/pkg/libfoo/1.1 install</userinput></screen>
       <title>User Based Management</title>
 
       <para>This scheme, unique to LFS, was devised by Matthias Benkmann, and is
-      available from the <ulink url="&hints-index;">Hints Project</ulink>. In
+      available from the <ulink url="&hints-root;">Hints Project</ulink>. In
       this scheme, each package is installed as a separate user into the
       standard locations. Files belonging to a package are easily identified by
       checking the user ID. The features and shortcomings of this approach are
