@@ -72,7 +72,7 @@
     <para>Compile the package:</para>
 
 <screen><userinput remap="make">make</userinput></screen>
-
+<!--
     <para>The test suite needs some custom modifications for LFS.
     Remove a test that fails when scripting does not use a tty device and
     fix two others.
@@ -82,6 +82,10 @@
 sed -i '/set tty/d' testsuite/pkill.test/pkill.exp
 rm testsuite/pgrep.test/pgrep.exp
 make check</userinput></screen>
+-->
+    <para> To run the test suite, run:</para>
+
+<screen><userinput remap="test">make check</userinput></screen>
 
     <para>Install the package:</para>
 
