@@ -1,13 +1,13 @@
-<!ENTITY version         "SVN-20200721">
+<!ENTITY version         "SVN-20200804">
 <!ENTITY short-version   "svn">  <!-- Used below in &blfs-book; 
                                       Change to x.y for release but not -rc releases -->
 <!ENTITY generic-version "development"> <!-- Use "development"  or "x.y[-pre{x}]" -->
 
-<!ENTITY versiond        "20200721-systemd">
+<!ENTITY versiond        "20200804-systemd">
 <!ENTITY short-versiond  "systemd">
 <!ENTITY generic-versiond "systemd"> 
 
-<!ENTITY releasedate     "July 21st, 2020">
+<!ENTITY releasedate     "August 4th, 2020">
 
 <!ENTITY copyrightdate   "1999-2020"><!-- jhalfs needs a literal dash, not &ndash; -->
 
