@@ -65,10 +65,10 @@
 <!ENTITY bc-fin-du "3.2 MB">
 <!ENTITY bc-fin-sbu "0.1 SBU">
 
-<!ENTITY binutils-version "2.34">
-<!ENTITY binutils-size "21,131 KB">
+<!ENTITY binutils-version "2.35">
+<!ENTITY binutils-size "21,526 KB">
 <!ENTITY binutils-url "&gnu;binutils/binutils-&binutils-version;.tar.xz">
-<!ENTITY binutils-md5 "664ec3a2df7805ed3464639aaae332d6">
+<!ENTITY binutils-md5 "fc8d55e2f6096de8ff8171173b6f5087">
 <!ENTITY binutils-home "&gnu-software;binutils/">
 <!ENTITY binutils-tmpp1-du "611 MB">
 <!ENTITY binutils-tmpp1-sbu "1 SBU">
@@ -77,10 +77,10 @@
 <!ENTITY binutils-fin-du "4.7 GB">
 <!ENTITY binutils-fin-sbu "6.6 SBU">
 
-<!ENTITY bison-version "3.6.4">
-<!ENTITY bison-size "2,415 KB">
+<!ENTITY bison-version "3.7">
+<!ENTITY bison-size "2,545 KB">
 <!ENTITY bison-url "&gnu;bison/bison-&bison-version;.tar.xz">
-<!ENTITY bison-md5 "08bf8aa8334d7f817b7b24509ef412bf">
+<!ENTITY bison-md5 "58439732ae3a0cefc598773c84f1641f">
 <!ENTITY bison-home "&gnu-software;bison/">
 <!ENTITY bison-tmp-du "47 MB">
 <!ENTITY bison-tmp-sbu "0.3 SBU">
@@ -95,10 +95,10 @@
 <!ENTITY bzip2-fin-du "7.7 MB">
 <!ENTITY bzip2-fin-sbu "less than 0.1 SBU">
 
-<!ENTITY check-version "0.15.0">
+<!ENTITY check-version "0.15.1">
 <!ENTITY check-size "757 KB">
 <!ENTITY check-url "&github;/libcheck/check/releases/download/&check-version;/check-&check-version;.tar.gz">
-<!ENTITY check-md5 "77b27bd48f9b16844c2f62333639a246">
+<!ENTITY check-md5 "4b22423bb2dddd0f965465d02b568d7b">
 <!ENTITY check-home "https://libcheck.github.io/check">
 <!ENTITY check-fin-du "12 MB">
 <!ENTITY check-fin-sbu "0.1 SBU (about 3.3 SBU with tests)">
@@ -217,10 +217,10 @@
 <!ENTITY gawk-fin-du "43 MB">
 <!ENTITY gawk-fin-sbu "0.4 SBU">
 
-<!ENTITY gcc-version "10.1.0">
-<!ENTITY gcc-size "72,844 KB">
+<!ENTITY gcc-version "10.2.0">
+<!ENTITY gcc-size "73,247 KB">
 <!ENTITY gcc-url "&gnu;gcc/gcc-&gcc-version;/gcc-&gcc-version;.tar.xz">
-<!ENTITY gcc-md5 "7d48e00245330c48b670ec9a2c518291">
+<!ENTITY gcc-md5 "e9fd9b1789155ad09bcf3ae747596b50">
 <!ENTITY gcc-home "https://gcc.gnu.org/">
 <!ENTITY gcc-tmpp1-du "3.7 GB">
 <!ENTITY gcc-tmpp1-sbu "11 SBU">
@@ -246,10 +246,10 @@
 <!ENTITY gdbm-fin-du "11 MB">
 <!ENTITY gdbm-fin-sbu "0.1 SBU">
 
-<!ENTITY gettext-version "0.20.2">
-<!ENTITY gettext-size "9,292 KB">
+<!ENTITY gettext-version "0.21">
+<!ENTITY gettext-size "9,487 KB">
 <!ENTITY gettext-url "&gnu;gettext/gettext-&gettext-version;.tar.xz">
-<!ENTITY gettext-md5 "0cf5f68338d5d941bbf9ac93b847310f">
+<!ENTITY gettext-md5 "40996bbaf7d1356d3c22e33a8b255b31">
 <!ENTITY gettext-home "&gnu-software;gettext/">
 <!ENTITY gettext-tmp-du "303 MB">
 <!ENTITY gettext-tmp-sbu "1.7 SBU">
@@ -375,7 +375,7 @@
 <!ENTITY less-fin-du "4.1 MB">
 <!ENTITY less-fin-sbu "less than 0.1 SBU">
 
-<!ENTITY lfs-bootscripts-version "20191031">      <!-- Scripts depend on this format -->
+<!ENTITY lfs-bootscripts-version "20200802">      <!-- Scripts depend on this format -->
 <!ENTITY lfs-bootscripts-size "BOOTSCRIPTS-SIZE KB">        
 <!ENTITY lfs-bootscripts-url "&downloads-root;lfs-bootscripts-&lfs-bootscripts-version;.tar.xz">
 <!ENTITY lfs-bootscripts-md5 "BOOTSCRIPTS-MD5SUM">  
@@ -383,10 +383,10 @@
 <!ENTITY lfs-bootscripts-cfg-du "BOOTSCRIPTS-INSTALL-KB KB"> 
 <!ENTITY lfs-bootscripts-cfg-sbu "less than 0.1 SBU">
 
-<!ENTITY libcap-version "2.40">
-<!ENTITY libcap-size "135 KB">
+<!ENTITY libcap-version "2.42">
+<!ENTITY libcap-size "138 KB">
 <!ENTITY libcap-url "&kernel;linux/libs/security/linux-privs/libcap2/libcap-&libcap-version;.tar.xz">
-<!ENTITY libcap-md5 "c7b2c60f8d0f2f46d37b2bf74e6eeee6">
+<!ENTITY libcap-md5 "f22cd619e04ae7b88a6a0c109b9523eb">
 <!ENTITY libcap-home "https://sites.google.com/site/fullycapable/">
 <!ENTITY libcap-fin-du "11 MB">
 <!ENTITY libcap-fin-sbu "less than 0.1 SBU">
@@ -417,12 +417,12 @@
 
 <!ENTITY linux-major-version "5">
 <!ENTITY linux-minor-version "7">
-<!ENTITY linux-patch-version "9">
+<!ENTITY linux-patch-version "12">
 <!--<!ENTITY linux-version "&linux-major-version;.&linux-minor-version;">-->
 <!ENTITY linux-version "&linux-major-version;.&linux-minor-version;.&linux-patch-version;">
-<!ENTITY linux-size "110,080 KB">
+<!ENTITY linux-size "110,093 KB">
 <!ENTITY linux-url "&kernel;linux/kernel/v&linux-major-version;.x/linux-&linux-version;.tar.xz">
-<!ENTITY linux-md5 "09d5fc3f89c9c0e607af7b0b0344b480">
+<!ENTITY linux-md5 "76bfc439430bc6596f1b0bcfc9ccff5c">
 <!ENTITY linux-home "https://www.kernel.org/">
 <!-- measured for 4.8.3 / gcc-6.2.0 on x86_64 : minimum is
  allnoconfig extended for a hopefully-bootable build on desktop machine,
@@ -689,11 +689,11 @@
 <!ENTITY udev-lfs-md5     "27cd82f9a61422e186b9d6759ddf1634">
 <!ENTITY udev-lfs-home    " ">
 
-<!ENTITY util-linux-minor "2.35">
-<!ENTITY util-linux-version "2.35.2"> <!-- 2.33.x -->
-<!ENTITY util-linux-size "5,030 KB">
+<!ENTITY util-linux-minor "2.36">
+<!ENTITY util-linux-version "2.36"> <!-- 2.33.x -->
+<!ENTITY util-linux-size "5,120 KB">
 <!ENTITY util-linux-url "&kernel;linux/utils/util-linux/v&util-linux-minor;/util-linux-&util-linux-version;.tar.xz">
-<!ENTITY util-linux-md5 "248a4d0810c9193e0e9a4bb3f26b93d8">
+<!ENTITY util-linux-md5 "fe7c0f7e439f08970e462c9d44599903">
 <!ENTITY util-linux-home "http://freecode.com/projects/util-linux">
 <!ENTITY util-linux-tmp-du "129 MB">
 <!ENTITY util-linux-tmp-sbu "0.7 SBU">
