@@ -6,9 +6,11 @@
 <!ENTITY bash-fixes-patch-md5 "c1545da2ad7d78574b52c465ec077ed9">
 <!ENTITY bash-fixes-patch-size "22 KB">
 
+<!--
 <!ENTITY binutils-gold-test-patch "binutils-&binutils-version;-gcc10_gold_test_fix-1.patch">
 <!ENTITY binutils-gold-test-patch-md5 "d18aaf9b25830cb8f7a5d44aa3febe28">
 <!ENTITY binutils-gold-test-patch-size "5.0 KB">
+-->
 
 <!ENTITY bzip2-docs-patch "bzip2-&bzip2-version;-install_docs-1.patch">
 <!ENTITY bzip2-docs-patch-md5 "6a5ac7e89b791aae556de0f745916f7f">
@@ -23,11 +25,11 @@
 <!ENTITY flex-fixes-patch-md5 "b46f6b0380e502a3dfb8b503227cd680">
 <!ENTITY flex-fixes-patch-size "3.4 KB">
 -->
-
+<!--
 <!ENTITY gcc-cross-patch "gcc-&gcc-version;-cet_fix-1.patch">
 <!ENTITY gcc-cross-patch-md5 "f37d8a6b4c943a6f8eaf541923fed838">
 <!ENTITY gcc-cross-patch-size "4.3 KB">
-
+-->
 <!ENTITY glibc-fhs-patch "glibc-&glibc-version;-fhs-1.patch">
 <!ENTITY glibc-fhs-patch-md5 "9a5997c3452909b1769918c759eff8a2">
 <!ENTITY glibc-fhs-patch-size "2.8 KB">
@@ -41,6 +43,10 @@
 <!ENTITY kbd-backspace-patch "kbd-&kbd-version;-backspace-1.patch">
 <!ENTITY kbd-backspace-patch-md5 "f75cca16a38da6caa7d52151f7136895">
 <!ENTITY kbd-backspace-patch-size "12 KB">
+
+<!ENTITY libpipeline-checks-patch "libpipeline-&libpipeline-version;-check_fixes-2.patch">
+<!ENTITY libpipeline-checks-patch-md5 "5b2a4f93153c8a7b40ddc9cfeb83d1c1">
+<!ENTITY libpipeline-checks-patch-size "ww KB">
 <!--
 <!ENTITY ninja-limit-jobs-patch "ninja-&ninja-version;-add_NINJAJOBS_var-1.patch">
 <!ENTITY ninja-limit-jobs-patch-md5 "f537a633532492e805aa342fa869ca45">
