@@ -1,3 +1,6 @@
+2020-08-02 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Fix a minor display problem in checkfs
+
 2019-10-31 DJ Lucas <dj@linuxfromscratch.org>
    * Syslog should not start in runlevel 2 due to network logging
    * Remove errant swap dependency for checkfs
